--- a/src/style/variables/default.scss
+++ b/src/style/variables/default.scss
@@ -1,29 +1,458 @@
-$hd: 2 !default; // 基本单位
+/**
+ * Default variables
+ */
 
-/* The Color of O2Team Brand */
-$color-brand: #32B16F !default;
+ @import '../mixins/libs/tint';
 
-/* Button */
-$at-button-height: 82px !default;
-$at-button-color: $color-brand !default;
-$at-button-border-color-primary: transparent !default;
-$at-button-bg: $at-button-color !default;
-$at-button-radius: 16px;
+ $hd: 2 !default; // 基本单位
 
-/* Text Color */
-$color-text-base: #333 !default; // 文字的基本色
+ /* The Color of O2Team Brand */
+ $color-brand: #32B16F !default;
+ $color-brand-light: #78A4F4 !default;
+ $color-brand-dark: #346FC2 !default;
 
-/* 透明度 */
-$opacity-active: 0.6 !default; // Button 等组件点击态额透明度
-$opacity-disabled: 0.3 !default; // Button 等组件禁用态的透明度
+ /* Color */
+ $color-success: #13CE66 !default;
+ $color-error: #FF4949 !default;
+ $color-warning: #FFC82C !default;
+ $color-info: #78A4FA !default;
 
+ /* Color Palette */
+ $color-black-0: #000 !default;
+ $color-black-1: #333 !default;
+ $color-black-2: #7F7F7F !default;
+ $color-black-3: #B2B2B2 !default;
 
-/* Font */
-$font-size-lg: 17px * $hd !default; // 常规标题
+ $color-grey-0: #333 !default;
+ $color-grey-1: #666 !default;
+ $color-grey-2: #999 !default;
+ $color-grey-3: #CCC !default;
+ $color-grey-4: #E5E5E5 !default;
+ $color-grey-5: #F0F0F0 !default;
+ $color-grey-6: #F7F7F7 !default;
 
+ $color-white: #FFF !default;
 
-/* 边框颜色 */
-$color-border-base: #C5D9E8 !default;
+ /* Text Color */
+ $color-text-base: #333 !default; // 文字的基本色
+ $color-text-base-inverse: #FFF !default; // 反色
+ $color-text-secondary: #36D57D !default; // 辅助色
+ $color-text-placeholder: #C9C9C9 !default;
+ $color-text-disabled: #CCC !default;
+ $color-text-title: #2C405A !default; // 文章标题
+ $color-text-paragraph: #3F536E !default; // 文章段落
 
-/* Text Color */
-$color-text-base-inverse: #FFF !default; // 反色
+ /* Link */
+ $color-link: #6190E8 !default;
+ $color-link-hover: #79A1EB !default;
+ $color-link-active: #4F7DE2 !default;
+ $color-link-disabled: #BFBFBF !default;
+
+ /* 背景色 */
+ $color-bg: #FFF !default;
+ $color-bg-base: #FAFBFC !default;
+ $color-bg-light: #ECF5FD !default;
+ $color-bg-lighter: tint($color-bg-light, 50%) !default;
+ $color-bg-grey: #F7F7F7 !default;
+
+ /* 边框颜色 */
+ $color-border-base: #C5D9E8 !default;
+ $color-border-split: tint($color-border-base, 20%) !default; // 分割线
+ $color-border-light: tint($color-border-base, 30%) !default;
+ $color-border-lighter: tint($color-border-base, 50%) !default;
+ $color-border-lightest: tint($color-border-base, 80%) !default;
+ $color-border-grey: #CCC !default;
+
+ /* 图标颜色 */
+ $color-icon-base: #CCC !default;
+
+ /* Border Radius */
+ $border-radius-sm: 2px * $hd !default;
+ $border-radius-md: 4px * $hd !default;
+ $border-radius-lg: 12px * $hd !default;
+ $border-radius-circle: 50% !default;
+
+ /* 透明度 */
+ $opacity-active: 0.6 !default; // Button 等组件点击态额透明度
+ $opacity-disabled: 0.3 !default; // Button 等组件禁用态的透明度
+
+ /* Font */
+ $font-size-xs: 10px * $hd !default; // 非常用字号，用于标签
+ $font-size-sm: 12px * $hd !default; // 用于辅助信息
+ $font-size-base: 14px * $hd !default; // 常用字号
+ $font-size-lg: 17px * $hd !default; // 常规标题
+ $font-size-xl: 18px * $hd !default; // 大标题
+ $font-size-xxl: 20px * $hd !default; // 用于大号的数字
+
+ /* Line Height */
+ $line-height-base: 1 !default; // 单行
+ $line-height-en: 1.3 !default; // 英文多行
+ $line-height-zh: 1.5 !default; // 中文多行
+
+ /* 水平间距 */
+ $spacing-h-sm: 5px * $hd !default;
+ $spacing-h-md: 8px * $hd !default;
+ $spacing-h-lg: 12px * $hd !default;
+ $spacing-h-xl: 16px * $hd !default;
+
+ /* 垂直间距 */
+ $spacing-v-xs: 3px * $hd !default;
+ $spacing-v-sm: 6px * $hd !default;
+ $spacing-v-md: 9px * $hd !default;
+ $spacing-v-lg: 12px * $hd !default;
+ $spacing-v-xl: 15px * $hd !default;
+
+ /* 图标尺寸 */
+ $icon-size-sm: 18px * $hd !default;
+ $icon-size-md: 22px * $hd !default;
+ $icon-size-lg: 36px * $hd !default;
+
+ /* z-index */
+ $zindex-divider: 100 !default;
+ $zindex-steps: 500 !default;
+ $zindex-tab: 600 !default;
+ $zindex-form: 700 !default;
+ $zindex-nav: 800 !default;
+ $zindex-search-bar: 800 !default;
+ $zindex-indexes: 805 !default;
+ $zindex-flot-layout: 810 !default;
+ $zindex-drawer: 900 !default;
+ $zindex-modal: 1000 !default;
+ $zindex-action-sheet: 1010 !default;
+ $zindex-picker: 1010 !default;
+ $zindex-curtain: 1080 !default;
+ $zindex-message: 1090 !default;
+ $zindex-toast: 1090 !default;
+
+ /* timing function */
+ $timing-func: cubic-bezier(0.36, 0.66, 0.04, 1) !default;
+
+ /**
+ * CSS cubic-bezier timing functions
+ * http://bourbon.io/docs/#timing-functions
+ */
+ $ease-in-quad: cubic-bezier(0.550, 0.085, 0.680, 0.530) !default;
+ $ease-in-cubic: cubic-bezier(0.550, 0.055, 0.675, 0.190) !default;
+ $ease-in-quart: cubic-bezier(0.895, 0.030, 0.685, 0.220) !default;
+ $ease-in-quint: cubic-bezier(0.755, 0.050, 0.855, 0.060) !default;
+ $ease-in-sine: cubic-bezier(0.470, 0.000, 0.745, 0.715) !default;
+ $ease-in-expo: cubic-bezier(0.950, 0.050, 0.795, 0.035) !default;
+ $ease-in-circ: cubic-bezier(0.600, 0.040, 0.980, 0.335) !default;
+ $ease-in-back: cubic-bezier(0.600, -0.280, 0.735, 0.045) !default;
+
+ $ease-out-quad: cubic-bezier(0.250, 0.460, 0.450, 0.940) !default;
+ $ease-out-cubic: cubic-bezier(0.215, 0.610, 0.355, 1.000) !default;
+ $ease-out-quart: cubic-bezier(0.165, 0.840, 0.440, 1.000) !default;
+ $ease-out-quint: cubic-bezier(0.230, 1.000, 0.320, 1.000) !default;
+ $ease-out-sine: cubic-bezier(0.390, 0.575, 0.565, 1.000) !default;
+ $ease-out-expo: cubic-bezier(0.190, 1.000, 0.220, 1.000) !default;
+ $ease-out-circ: cubic-bezier(0.075, 0.820, 0.165, 1.000) !default;
+ $ease-out-back: cubic-bezier(0.175, 0.885, 0.320, 1.275) !default;
+
+ $ease-in-out-quad: cubic-bezier(0.455, 0.030, 0.515, 0.955) !default;
+ $ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1.000) !default;
+ $ease-in-out-quart: cubic-bezier(0.770, 0.000, 0.175, 1.000) !default;
+ $ease-in-out-quint: cubic-bezier(0.860, 0.000, 0.070, 1.000) !default;
+ $ease-in-out-sine: cubic-bezier(0.445, 0.050, 0.550, 0.950) !default;
+ $ease-in-out-expo: cubic-bezier(1.000, 0.000, 0.000, 1.000) !default;
+ $ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.150, 0.860) !default;
+ $ease-in-out-back: cubic-bezier(0.680, -0.550, 0.265, 1.550) !default;
+
+ /**
+  * 组件变量
+  */
+
+ /* Accordion */
+ $zo-accordion-color-arrow: $color-grey-3 !default;
+
+ /* Activity Indicator */
+ $zo-activity-indicator-font-size: 28px !default;
+ $zo-activity-indicator-font-color: $color-grey-2 !default;
+
+ /* Avatar */
+ $zo-avatar-color: $color-white !default;
+ $zo-avatar-bg-color: $color-grey-4 !default;
+ $zo-avatar-size-sm: 80px !default;
+ $zo-avatar-size-md: 100px !default;
+ $zo-avatar-size-lg: 120px !default;
+
+ /* Badge */
+ $zo-badge-color: $color-white !default;
+ $zo-badge-bg-color: $color-error !default;
+ $zo-badge-bg: $zo-badge-bg-color !default;
+ $zo-badge-font-size: $font-size-xs !default;
+ $zo-badge-dot-size: 20px !default;
+
+ /* Button */
+ $zo-button-height: 82px !default;
+ $zo-button-height-sm: 60px !default;
+ $zo-button-color: $color-brand !default;
+ $zo-button-border-color-primary: $color-brand !default;
+ $zo-button-border-color-secondary: $color-brand !default;
+ $zo-button-bg: $zo-button-color !default;
+ $zo-button-radius: 16px;
+
+ /* Float Button */
+ $zo-fab-size: 56px * $hd !default;
+ $zo-fab-size-sm: 40px * $hd !default;
+ $zo-fab-icon-size: 24px * $hd !default;
+ $zo-fab-bg-color: $color-brand;
+ $zo-fab-bg-color-active: $color-brand-dark;
+ $zo-fab-box-shadow:
+   0 6px 10px -2px rgba(0, 0, 0, 0.2),
+   0 12px 20px 0 rgba(0, 0, 0, 0.14),
+   0 2px 36px 0 rgba(0, 0, 0, 0.12) !default;
+ $zo-fab-box-shadow-active:
+   0 14px 16px -8px rgba(0, 0, 0, 0.2),
+   0 24px 34px 4px rgba(0, 0, 0, 0.14),
+   0 10px 44px 8px rgba(0, 0, 0, 0.12) !default;
+
+ /* Calendar */
+ $zo-calendar-day-size: 72px !default;
+ $zo-calendar-mark-size: 8px !default;
+ $zo-calendar-header-color: #B8BFC6 !default;
+ $zo-calendar-main-color: $color-brand !default;
+ $zo-calendar-day-color: #7C86A2 !default;
+
+ /* Card */
+ $zo-card-thumb-size: 32px !default;
+ $zo-card-icon-size: 32px !default;
+ $zo-card-title-color: $color-text-title !default;
+ $zo-card-extra-color: $color-text-title !default;
+ $zo-card-info-color: $color-text-base !default;
+ $zo-card-note-color: $color-grey-2 !default;
+
+ /* Checkbox */
+ $zo-checkbox-circle-size: 40px !default;
+ $zo-checkbox-icon-size: $font-size-sm !default;
+ $zo-checkbox-icon-color: $color-brand !default;
+ $zo-checkbox-icon-color-checked: $color-white !default;
+ $zo-checkbox-title-color: $color-text-base !default;
+ $zo-checkbox-title-font-size: $font-size-lg !default;
+ $zo-checkbox-desc-font-size: $font-size-sm !default;
+ $zo-checkbox-desc-color: $color-grey-2 !default;
+
+ /* Countdown */
+ $zo-countdown-font-size: $font-size-lg !default;
+ $zo-countdown-num-color: $color-text-base !default;
+ $zo-countdown-card-num-color: #FF4949 !default;
+ $zo-countdown-card-num-bg-color: $color-white !default;
+
+ /* Curtain */
+ $zo-curtain-btn-color: $color-white !default;
+
+ /* Divider */
+ $zo-divider-height: 112px;
+ $zo-divider-content-color: $color-brand !default;
+ $zo-divider-font-size: $font-size-lg !default;
+ $zo-divider-line-color: $color-grey-3 !default;
+
+ /* Drawer */
+ $zo-drawer-content-width: 460px !default;
+
+ /* FloatLayout */
+ $flozo-layout-height-min: 600px !default;
+ $flozo-layout-height-max: 950px !default;
+ $flozo-layout-header-bg-color: $color-bg-grey !default;
+ $flozo-layout-title-color: $color-text-base !default;
+ $flozo-layout-title-font-size: $font-size-lg !default;
+ $flozo-layout-btn-color: $color-grey-3 !default;
+
+ /* Grid */
+ $zo-grid-text-color: $color-text-base !default;
+ $zo-grid-font-size: $font-size-lg !default;
+ $zo-grid-img-size: 80px !default;
+ $zo-gird-img-size-sm: 50px !default;
+
+ /* ImagePicker */
+ $zo-image-picker-btn-add-color: $color-grey-3 !default;
+ $zo-image-picker-btn-remove-color: $color-white !default;
+ $zo-image-picker-btn-remove-bg-color: $color-grey-2 !default;
+
+ /* Indexes */
+ $zo-indexes-nav-color: $color-link !default;
+ $zo-indexes-nav-font-size: $font-size-sm !default;
+ $zo-indexes-title-color: $color-black-2 !default;
+ $zo-indexes-title-font-size: $font-size-sm !default;
+ $zo-indexes-title-bg-color: $color-grey-6 !default;
+
+ /* InputNumber */
+ $zo-input-number-text-color: $color-text-base !default;
+ $zo-input-number-font-size: $font-size-base !default;
+ $zo-input-number-font-size-lg: $font-size-xl !default;
+ $zo-input-number-btn-color: $color-brand !default;
+ $zo-input-number-btn-size: 30px !default;
+ $zo-input-number-btn-size-lg: 36px !default;
+ $zo-input-number-width-min: 80px !default;
+ $zo-input-number-width-min-lg: 120px !default;
+
+ /* Input */
+ $zo-input-label-color: $color-text-base !default;
+ $zo-input-text-color: $color-text-base !default;
+ $zo-input-font-size: $font-size-lg !default;
+ $zo-input-placeholder-color: $color-grey-3 !default;
+
+ /* List */
+ $zo-list-thumb-size: 56px !default;
+ $zo-list-arrow-color: $color-grey-3 !default;
+ $zo-list-text-color: $color-text-base !default;
+ $zo-list-content-color: $color-grey-2 !default;
+ $zo-list-extra-color: $color-grey-2 !default;
+ $zo-list-extra-width: 235px !default;
+
+ /* LoadMore */
+ $zo-load-more-height: 80PX !default;
+ $zo-load-more-tips-color: $color-grey-1 !default;
+ $zo-load-more-tips-size: $font-size-lg !default;
+
+ /* Loading */
+ $zo-loading-size: 36px !default;
+ $zo-loading-color: $color-brand !default;
+
+ /* Message */
+ $zo-message-color: $color-white !default;
+ $zo-message-font-size: $font-size-base !default;
+ $zo-message-bg-color: $color-info !default;
+
+ /* Modal */
+ $zo-modal-width: 640px !default;
+ $zo-modal-header-text-color: $color-text-base !default;
+ $zo-modal-content-text-color: $color-text-base !default;
+ $zo-modal-btn-default-color: $color-text-base !default;
+ $zo-modal-btn-confirm-color: $color-brand !default;
+ $zo-modal-bg-color: $color-white !default;
+
+ /* NavBar */
+ $zo-nav-bar-title-color: $color-text-base !default;
+ $zo-nav-bar-link-color: $color-brand !default;
+
+ /* NoticeBar */
+ $zo-noticebar-text-color: #DE8C17 !default;
+ $zo-noticebar-bg-color: #FCF6ED !default;
+ $zo-noticebar-font-size: $font-size-sm !default;
+ $zo-noticebar-icon-size: 30px !default;
+ $zo-noticebar-btn-close-size: 32px !default;
+ $zo-noticebar-btn-close-color: $color-grey-3 !default;
+
+ /* Pagination */
+ $zo-pagination-margin: 40px !default;
+ $zo-pagination-num-color: $color-text-base !default;
+ $zo-pagination-num-font-size: $font-size-base !default;
+ $zo-pagination-current-num-color: $color-brand !default;
+ $zo-pagination-icon-color: $color-text-base !default;
+ $zo-pagination-icon-font-size: 32px !default;
+
+ /* Progress */
+ $zo-progress-height: 16px !default;
+ $zo-progress-text-size: $font-size-sm !default;
+ $zo-progress-icon-size: $font-size-xl !default;
+ $zo-progress-inner-bg-color: $color-grey-6 !default;
+ $zo-progress-bar-bg-color: $color-brand-light !default;
+ $zo-progress-bar-bg-color-active: $color-white !default;
+
+ /* Radio */
+ $zo-radio-title-color: $color-text-base !default;
+ $zo-radio-title-size: $font-size-lg !default;
+ $zo-radio-desc-color: $color-grey-2 !default;
+ $zo-radio-desc-size: $font-size-sm !default;
+ $zo-radio-check-color: $color-brand !default;
+
+ /* Range */
+ $zo-range-slider-size: 28PX !default;
+ $zo-range-rail-height: 2PX !default;
+ $zo-range-rail-bg-color: #E9E9E9 !default;
+ $zo-range-track-bg-color: $color-brand !default;
+ $zo-range-slider-color: $color-white !default;
+ $zo-range-slider-shadow: 0 0 4PX 0 rgba(0, 0, 0, 0.2) !default;
+
+ /* Rate */
+ $zo-rate-icon-size: 20PX !default;
+ $zo-rate-star-color: #ECECEC !default;
+ $zo-rate-star-color-on: #FFCA3E !default;
+
+ /* SearchBar */
+ $zo-search-bar-btn-color: $color-white !default;
+ $zo-search-bar-btn-bg-color: $color-brand !default;
+
+ /* SegmentedControl */
+ $zo-segmented-control-color: $color-brand !default;
+ $zo-segmented-control-color-active: $color-white !default;
+ $zo-segmented-control-bg-color: transparent !default;
+ $zo-segmented-control-font-size: $font-size-base !default;
+
+ /* Slider */
+ $zo-slider-text-color: $color-grey-2 !default;
+ $zo-slider-text-size: $font-size-base !default;
+
+ /* Steps */
+ $zo-steps-circle-size: 56px !default;
+ $zo-steps-icon-size: $font-size-sm !default;
+ $zo-steps-color: $color-white !default;
+ $zo-steps-color-active: $color-grey-2 !default;
+ $zo-steps-bg-color: $color-grey-4 !default;
+ $zo-steps-bg-color-active: $color-brand !default;
+ $zo-steps-line-color: $color-grey-3 !default;
+ $zo-steps-title-color: $color-black-0 !default;
+ $zo-steps-title-size: $font-size-lg !default;
+ $zo-steps-desc-color: $color-grey-3 !default;
+ $zo-steps-desc-size: $font-size-sm !default;
+
+ /* SwipeAction */
+ $zo-swipe-action-color: $color-white !default;
+ $zo-swipe-action-font-size: $font-size-base !default;
+ $zo-swipe-action-bg-color: $color-white !default;
+ $zo-swipe-action-option-bg-color: $color-grey-2 !default;
+
+ /* Switch */
+ $zo-switch-title-color: $color-text-base !default;
+ $zo-switch-title-size: $font-size-base !default;
+
+ /* TabBar */
+ $zo-tab-bar-bg-color: $color-white !default;
+ $zo-tab-bar-color: $color-text-base !default;
+ $zo-tab-bar-color-active: $color-brand !default;
+ $zo-tab-bar-font-size: $font-size-base !default;
+ $zo-tab-bar-icon-color: $color-grey-0 !default;
+ $zo-tab-bar-icon-font-size: 48px !default;
+ $zo-tab-bar-icon-image-size: 50px !default;
+
+ /* Tabs */
+ $zo-tabs-color: $color-text-base !default;
+ $zo-tabs-color-active: $color-brand !default;
+ $zo-tabs-font-size: $font-size-base !default;
+ $zo-tabs-line-height: 1PX !default;
+ $zo-tabs-underline-color: $color-grey-5 !default;
+ $zo-tabs-bg-color: $color-bg !default;
+
+ /* Tag */
+ $zo-tag-height: 60px !default;
+ $zo-tag-height-sm: 40px !default;
+ $zo-tag-color: $color-grey-1 !default;
+ $zo-tag-color-primary: $color-grey-1 !default;
+ $zo-tag-color-active: $color-brand-light !default;
+ $zo-tag-color-primary-active: $color-text-base-inverse !default;
+ $zo-tag-font-size: $font-size-base !default;
+ $zo-tag-font-size-sm: $font-size-xs !default;
+ $zo-tag-bg-color: $color-bg-grey !default;
+ $zo-tag-bg-color-primary: $color-bg-grey !default;
+ $zo-tag-bg-color-active: $color-white !default;
+ $zo-tag-bg-color-primary-active: $zo-tag-color-active !default;
+ $zo-tag-border-color: $zo-tag-bg-color !default;
+ $zo-tag-border-color-primary: $zo-tag-bg-color !default;
+ $zo-tag-border-color-active: $zo-tag-color-active !default;
+
+ /* Textarea */
+ $zo-textarea-font-size: $font-size-lg !default;
+ $zo-textarea-tips-color: $color-text-placeholder !default;
+ $zo-textarea-tips-size: $font-size-base !default;
+
+ /* Timeline */
+ $zo-timeline-offset-left: 40px !default;
+ $zo-timeline-title-color: $color-grey-0 !default;
+ $zo-timeline-title-font-size: $font-size-base !default;
+ $zo-timeline-desc-color: $color-grey-1 !default;
+ $zo-timeline-desc-font-size: $font-size-sm !default;
+ $zo-timeline-dot-size: 24px !default;
+ $zo-timeline-dot-color: $color-bg !default;
+ $zo-timeline-dot-border-color: $color-brand-light !default;
+ $zo-timeline-line-color: $color-border-lighter !default;
