--- a/src/style/components/index.scss
+++ b/src/style/components/index.scss
@@ -4,4 +4,5 @@
 @import './icon.scss';
 @import './picker.scss';
 @import './picker-view.scss';
-@import './default-page'
+@import './default-page';
+@import './action-sheet.scss';
