--- a/src/style/components/picker-view.scss
+++ b/src/style/components/picker-view.scss
@@ -35,6 +35,9 @@
     width: 100%;
   }
   &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
     height: 112px;
     line-height: 112px;
@@ -45,6 +48,11 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    &__label {
+      font-size:28px;
+      font-weight:400;
+      margin-left: 4px;
+    }
   }
 
 }
