--- a/src/style/components/picker-view.scss
+++ b/src/style/components/picker-view.scss
@@ -1,10 +1,13 @@
 
 .zo-picker-view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 1;
   position: relative;
   height: 100%;
   overflow: hidden;
-  &__indicator, &__mask {
+  &__mask {
     width: 100%;
     position: absolute;
     left: 0;
@@ -23,10 +26,13 @@
     height: 100%;
   }
   &__indicator {
+    position: relative;
+    z-index: 3;
+    width: 100%;
     height: 110px;
     border-bottom: 2px solid rgba(229,229,229,1);
     border-top: 2px solid rgba(229,229,229,1);
-    top: 112px;
+
   }
   &__content {
     position: absolute;
