--- a/src/style/components/picker-view.scss
+++ b/src/style/components/picker-view.scss
@@ -19,7 +19,7 @@
     z-index: 3;
     background: linear-gradient(180deg,rgba(255,255,255,.95),rgba(255,255,255,.6)),linear-gradient(0deg,rgba(255,255,255,.95),rgba(255,255,255,.6));
     background-position: top,bottom;
-    background-size: 100% 102px;
+    background-size: 100% 56Px;/*no*/
     background-repeat: no-repeat;
     transform: translateZ(0);
     top: 0;
@@ -29,9 +29,9 @@
     position: relative;
     z-index: 3;
     width: 100%;
-    height: 110px;
-    border-bottom: 2px solid rgba(229,229,229,1);
-    border-top: 2px solid rgba(229,229,229,1);
+    height: 55Px;/*no*/
+    border-bottom: 1Px solid rgba(229,229,229,1);
+    border-top: 1Px solid rgba(229,229,229,1);
 
   }
   &__content {
@@ -45,19 +45,19 @@
     align-items: center;
     justify-content: center;
     padding: 0;
-    height: 112px;
-    line-height: 112px;
+    height: 56Px;/*no*/
+    line-height: 56Px;/*no*/
     font-weight:600;
     color:rgba(0,0,0,1);
-    font-size:40px;
+    font-size:20Px;/*no*/
     text-align: center;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     &__label {
-      font-size:28px;
+      font-size:14Px;/*no*/
       font-weight:400;
-      margin-left: 4px;
+      margin-left: 2Px;/*no*/
     }
   }
 
