--- a/src/style/components/picker.scss
+++ b/src/style/components/picker.scss
@@ -2,10 +2,10 @@
   height: 100%;
   &__hd {
     display: flex;
-    padding: 30px;
+    padding: 15Px;/*no*/
     position: relative;
     text-align: center;
-    font-size: 28px;
+    font-size: 14Px;/*no*/
     &__action {
       display: block;
       flex: 1;
@@ -20,32 +20,32 @@
     }
   }
   &__title {
-    font-size:32px;
+    font-size:16Px;/*no*/
     font-weight:500;
     color:rgba(0,0,0,1);
-    line-height:32px;
+    line-height:16Px;/*no*/
   }
 }
 .zo-picker__bd {
-  padding: 0 30px;
+  padding: 0 15Px;/*no*/
   display: flex;
   position: relative;
   height: 100%;
   overflow: hidden;
-  height: 336px;
+  height: 168Px;/*no*/
   &__desc {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-top: -28px;
-    margin-left: -20px;
+    margin-top: -14Px;/*no*/
+    margin-left: -10Px;/*no*/
     text-align: center;
-    width:40px;
-    height:56px;
-    font-size:40px;
+    width:20Px;/*no*/
+    height:28Px;/*no*/
+    font-size:20Px;/*no*/
     font-weight:600;
     color:rgba(0,0,0,1);
-    line-height:56px;
+    line-height:28Px;/*no*/
   }
 }
 
